fix body scrollbar

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -14,6 +14,8 @@ body {
 }
 
 #js-wrapper-body {
+	position: relative;
+	overflow: hidden;
 	height: 100vh;
 }
 
